# local-project-memory

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md
docs/design/: index-pipeline-design.md  memory-governance-and-human-interface.md  phase1-boundary.md  project-memory-workflow.md  recall-api-design.md  schema-design.md
docs/research/: implementation-recommendations.md  lancedb-research.md  unity-core-needs.md
docs/roadmap/: progress.md
docs/validation/: mvp-acceptance.md
src/local_project_memory/: __init__.py  config.py
src/local_project_memory/api/: __init__.py  app.py
src/local_project_memory/cli/: __init__.py  main.py
src/local_project_memory/domain/: __init__.py  models.py
src/local_project_memory/indexer/: __init__.py  pipeline.py  project_index.py  record_mapper.py
src/local_project_memory/services/: __init__.py  lancedb_store.py  recall.py  store.py
tests/: conftest.py  test_api.py  test_cli.py  test_indexer.py  test_lancedb_store.py  test_models.py  test_project_index.py  test_services.py
