[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "local-project-memory"
version = "0.1.0"
description = "Local project memory and indexing service for long-lived LLM workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "lancedb>=0.22,<1.0",
  "pydantic>=2.8,<3.0",
  "uvicorn>=0.30,<1.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0"
]

[project.scripts]
lpm = "local_project_memory.cli.main:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--basetemp=./.pytest_tmp"

[tool.hatch.build.targets.wheel]
packages = ["src/local_project_memory"]